--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
-  "name": "simple-cdn-platform",
+  "name": "cdn-platform",
   "version": "1.0.0",
-  "private": true,
+  "type": "module",
+  "dependencies": {
+    "axios": "^1.6.0",
+    "uuid": "^9.0.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "qs": "^6.11.2",
+    "crypto-js": "^4.2.0",
+    "marked": "^9.1.5",
+    "prismjs": "^1.29.0"
+  },
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240620.0",
     "wrangler": "^3.0.0",
+    "@cloudflare/workers-types": "^4.0.0",
     "esbuild": "^0.20.0"
   }
 }
