--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,8 +5,5 @@ compatibility_date = "2024-01-01"
 [[d1_databases]]
 binding = "DB"
 database_name = "cdn-files"
-database_id = "auto-generated"
+database_id = "ab95b05d-56ab-420a-b9cb-82c1bb9468b2"
 
-[[r2_buckets]]
-binding = "BUCKET"
-bucket_name = "cdn-files"
