--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "axios": "^1.6.0",
     "uuid": "^9.0.1",
     "lodash": "^4.17.21",
@@ -18,7 +19,6 @@
   },
   "devDependencies": {
     "wrangler": "^3.0.0",
-    "@cloudflare/workers-types": "^4.0.0",
-    "esbuild": "^0.20.0"
+    "@cloudflare/workers-types": "^4.0.0"
   }
 }
